objects/advitya__Advitya_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Error_Cause__c</fullName>
        <label>Error Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__Exception_Line_No__c</fullName>
        <label>Exception Line No.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advitya__Log_Type__c</fullName>
        <label>Log Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advitya__Message__c</fullName>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Advitya Exception Log</label>
    <nameField>
        <displayFormat>ADVEL-{000000000}</displayFormat>
        <label>Advitya Exception Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advitya Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>